Add Sample Kotlin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
         android:supportsRtl="true"
         tools:ignore="AllowBackup">
         <!--android:theme="@style/Theme.XlsToJson"-->
-        <activity android:name=".MainActivity">
+        <activity android:name=".kt.MainKtActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" />
 
 
         <!--provider
