--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,11 @@ android {
 
     defaultConfig {
         applicationId "id.indosw.xlstojson"
-        minSdkVersion 26
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        //multiDexEnabled true
     }
 
     buildTypes {
@@ -29,8 +30,10 @@ android {
 
 dependencies {
 
-    implementation 'org.apache.poi:poi:4.1.2'
-    //implementation 'org.apache.poi:poi-ooxml:4.1.2'
+    implementation 'org.apache.poi:poi:3.17'
+    implementation ("org.apache.poi:poi-ooxml:3.17"){
+        exclude group: "org.apache.xmlbeans"
+    }
 
     //implementation 'androidx.appcompat:appcompat:1.3.0'
     //implementation 'com.google.android.material:material:1.3.0'
