--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        //multiDexEnabled true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -29,17 +29,36 @@ android {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
+    implementation files('libs/poishadow-all.jar')
+    implementation project(path:':fileutil')
+    implementation project(":jsonviewer")
 
-    implementation 'org.apache.poi:poi:3.17'
-    implementation ("org.apache.poi:poi-ooxml:3.17"){
+    /**
+    //noinspection GradleDependency
+    //implementation 'org.apache.poi:poi:3.17'
+    //noinspection GradleDependency
+    implementation ("org.apache.poi:poi-ooxml:3.17") {
         exclude group: "org.apache.xmlbeans"
-    }
-
+    }**/
     //implementation 'androidx.appcompat:appcompat:1.3.0'
     //implementation 'com.google.android.material:material:1.3.0'
+    /**implementation 'javax.xml.stream:stax-api:1.0-2'**/
+    /**implementation 'com.fasterxml:aalto-xml:1.2.2'**/
 
-    implementation project(path:':fileutil')
-    //implementation "androidx.core:core-ktx:+"
+    //implementation files('libs/commons-codec-1.10.jar')
+    //implementation files('libs/commons-collections4-4.1.jar')
+    //implementation files('libs/curvesapi-1.04.jar')
+    //implementation files('libs/jackson-annotations-2.11.0.jar')
+    //implementation files('libs/jackson-core-2.11.0.jar')
+    //implementation files('libs/jackson-databind-2.11.0.jar')
+    //implementation files('libs/poi-3.17.jar')
+    //implementation files('libs/poi-ooxml-3.17.jar')
+    //implementation files('libs/poi-ooxml-schemas-3.17.jar')
+    //implementation files('libs/stax-api-1.0.1.jar')
+    //implementation files('libs/xmlbeans-2.6.0.jar')
+    //implementation project(path:':crashreport')
+    //implementation "androidx.core:core-ktx:1.5.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
