--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation files('libs/poishadow-all.jar')
     implementation project(path:':fileutil')
     implementation project(":jsonviewer")
+    implementation project(path:':crashreport')
 
     /**
     //noinspection GradleDependency
@@ -57,7 +58,6 @@ dependencies {
     //implementation files('libs/poi-ooxml-schemas-3.17.jar')
     //implementation files('libs/stax-api-1.0.1.jar')
     //implementation files('libs/xmlbeans-2.6.0.jar')
-    //implementation project(path:':crashreport')
     //implementation "androidx.core:core-ktx:1.5.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
