--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".kt.MainKtActivity" />
-        <activity android:name=".java.ExcelToJsonActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".java.ExcelToJsonActivity" />
+        <activity android:name=".java.JsonToExcelActivity" />
 
 
         <!--provider
