--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     implementation ("org.apache.poi:poi-ooxml:3.17") {
         exclude group: "org.apache.xmlbeans"
     }**/
-    //implementation 'androidx.appcompat:appcompat:1.3.0'
-    //implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.3.0'
     /**implementation 'javax.xml.stream:stax-api:1.0-2'**/
     /**implementation 'com.fasterxml:aalto-xml:1.2.2'**/
 
@@ -58,7 +58,7 @@ dependencies {
     //implementation files('libs/poi-ooxml-schemas-3.17.jar')
     //implementation files('libs/stax-api-1.0.1.jar')
     //implementation files('libs/xmlbeans-2.6.0.jar')
-    //implementation "androidx.core:core-ktx:1.5.0"
+    implementation "androidx.core:core-ktx:1.5.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
