--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.XlsToJson"
         tools:ignore="AllowBackup">
         <!--android:theme="@style/Theme.XlsToJson"-->
         <activity android:name=".SelectorActivity">
@@ -23,21 +24,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kt.MainKtActivity" />
-        <activity android:name=".MainActivity" />
         <activity android:name=".java.ExcelToJsonActivity" />
         <activity android:name=".java.JsonToExcelActivity" />
+        <activity android:name=".java.ExcelToJson2Activity" />
 
 
-        <!--provider
+        <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="vi.filepicker"
+            android:authorities="${applicationId}.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
-        </provider-->
+                android:resource="@xml/provider_paths" />
+        </provider>
 
     </application>
 
